# cifuzz

./: .gitignore  .golangci.yaml  .pkgx.yaml  .prettierignore  .releaserc.json  .tool-versions  CODEOWNERS  CONTRIBUTING.md  LICENSE  Makefile  README.md  coverage.out  dangerfile.js  go.mod  go.sum  package.json
.github/: pull_request_template.md  release_template.md
docs/: Configuration.md  Coverage-ide-integrations.md  Fuzz-Containers.md  Getting-Started.md  Glossary.md  How-To-Write-A-Fuzz-Test.md  Installation-Guide.md  RELEASE.md  Regression-Testing.md  Troubleshooting.md
e2e-tests/: e2e-test-runner-assertions.go  e2e-test-runner-docker.go  (+3 more)
integration-tests/errors/cpp/testdata/: CMakeLists.txt
integration-tests/errors/cpp/testdata/alloc_dealloc_mismatch/: CMakeLists.txt  alloc_dealloc_mismatch.cpp  alloc_dealloc_mismatch_fuzztest.cpp
integration-tests/errors/cpp/testdata/deadly_signal/: CMakeLists.txt  deadly_signal.cpp  deadly_signal_fuzztest.cpp
integration-tests/errors/cpp/testdata/double_free/: CMakeLists.txt  double_free.cpp  double_free_fuzztest.cpp
integration-tests/errors/cpp/testdata/global_buffer_overflow/: CMakeLists.txt  global_buffer_overflow.cpp  global_buffer_overflow_fuzztest.cpp
integration-tests/errors/cpp/testdata/heap_buffer_overflow/: CMakeLists.txt  heap_buffer_overflow.cpp  heap_buffer_overflow_fuzztest.cpp
integration-tests/errors/cpp/testdata/heap_use_after_free/: CMakeLists.txt  heap_use_after_free.cpp  heap_use_after_free_fuzztest.cpp
integration-tests/errors/cpp/testdata/memory_leak/: CMakeLists.txt  memory_leak.cpp  memory_leak_fuzztest.cpp
integration-tests/errors/cpp/testdata/odr_violation/: CMakeLists.txt  odr_violation.cpp  odr_violation_fuzztest.cpp
integration-tests/errors/cpp/testdata/out_of_bounds/: CMakeLists.txt  out_of_bounds.cpp  out_of_bounds_fuzztest.cpp
integration-tests/errors/cpp/testdata/out_of_memory/: CMakeLists.txt  out_of_memory.cpp  out_of_memory_fuzztest.cpp
integration-tests/errors/cpp/testdata/segmentation_fault/: CMakeLists.txt  segmentation_fault.cpp  segmentation_fault_fuzztest.cpp
integration-tests/errors/cpp/testdata/shift_exponent/: CMakeLists.txt  shift_exponent.cpp  shift_exponent_fuzztest.cpp
integration-tests/errors/cpp/testdata/slow_input/: CMakeLists.txt  slow_input.cpp  slow_input_fuzztest.cpp
integration-tests/errors/cpp/testdata/stack_buffer_overflow/: CMakeLists.txt  stack_buffer_overflow.cpp  stack_buffer_overflow_fuzztest.cpp
integration-tests/errors/cpp/testdata/stack_exhaustion/: CMakeLists.txt  stack_exhaustion.cpp  stack_exhaustion_fuzztest.cpp
integration-tests/errors/cpp/testdata/timeout/: CMakeLists.txt  timeout.cpp  timeout_fuzztest.cpp
integration-tests/errors/cpp/testdata/use_after_return/: CMakeLists.txt  use_after_return.cpp  use_after_return_fuzztest.cpp
integration-tests/errors/cpp/testdata/use_after_scope/: CMakeLists.txt  use_after_scope.cpp  use_after_scope_fuzztest.cpp
tools/cmake/testdata/src/parser/: CMakeLists.txt
tools/cmake/testdata/src/utils/: CMakeLists.txt
(+471 files in other folders)
